Private-EKS-Infrastructure/epis.tf
#------------elastic-ip----------------
resource "aws_eip" "nat_ip" {
  vpc = true
}
