Private-EKS-Infrastructure/internet-gateway.tf
#-----------------------Interner-gatway-------------------------------------
resource "aws_internet_gateway" "myigw" {
  vpc_id = aws_vpc.myvpc.id
  tags = {
    Name = "my-igw"
  }
}
